[project]
name = "01"
version = "0.1.0"
description = "Web Scraper API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "undetected-chromedriver>=3.5.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "setuptools>=80.9.0",
]
